--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "formik": "^2.4.3",
     "next": "^13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -26,5 +27,9 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.1.5",
     "zustand": "^4.3.9"
+  },
+  "devDependencies": {
+    "@types/react-google-recaptcha": "^2.1.5",
+    "react-google-recaptcha": "^3.1.0"
   }
 }
