--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "formik": "^2.4.3",
+    "framer-motion": "^10.16.4",
     "next": "^13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
