--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.7",
+    "@paypal/react-paypal-js": "^8.1.3",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.5.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "formik": "^2.4.4",
@@ -30,6 +32,8 @@
     "zustand": "^4.3.9"
   },
   "devDependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
+    "@types/paypal__checkout-server-sdk": "^1.0.5",
     "@types/react-google-recaptcha": "^2.1.5",
     "react-google-recaptcha": "^3.1.0"
   }
