--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,10 +18,13 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
+    "cookies-next": "^4.0.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "formik": "^2.4.4",
     "framer-motion": "^10.16.4",
+    "jose": "^4.14.6",
+    "jsonwebtoken": "^9.0.2",
     "next": "^13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -33,6 +36,7 @@
   },
   "devDependencies": {
     "@paypal/checkout-server-sdk": "^1.0.3",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/paypal__checkout-server-sdk": "^1.0.5",
     "@types/react-google-recaptcha": "^2.1.5",
     "react-google-recaptcha": "^3.1.0"
