--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^10.16.4",
     "jose": "^4.14.6",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
     "next": "^13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
