--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,9 +27,11 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
     "next": "^13.4.7",
+    "next-cloudinary": "^4.22.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
     "swiper": "^9.4.1",
     "tailwindcss": "3.3.2",
