--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -34,6 +34,7 @@
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.8.0",
     "swiper": "^9.4.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.5",
