--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -30,6 +30,7 @@
     "next-cloudinary": "^4.22.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
