--- a/Euphoria_Next/package.json
+++ b/Euphoria_Next/package.json
@@ -36,7 +36,6 @@
     "react-query": "^3.39.3",
     "react-toastify": "^9.1.3",
     "recharts": "^2.8.0",
-    "swiper": "^9.4.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.5",
     "zustand": "^4.3.9"
@@ -46,6 +45,7 @@
     "@types/jsonwebtoken": "^9.0.3",
     "@types/paypal__checkout-server-sdk": "^1.0.5",
     "@types/react-google-recaptcha": "^2.1.5",
-    "react-google-recaptcha": "^3.1.0"
+    "react-google-recaptcha": "^3.1.0",
+    "swiper": "^11.0.3"
   }
 }
