--- a/Euphoria_Next/package.json
+++ b/Euphoria_Next/package.json
@@ -26,6 +26,7 @@
     "jose": "^4.14.6",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
+    "mongoose": "^7.6.3",
     "next": "^13.4.7",
     "next-cloudinary": "^4.22.0",
     "nodemailer": "^6.9.7",
