feat: added order placing: creating Order and capturing then and updating order status

--- a/Euphoria_Next/.env.example
+++ b/Euphoria_Next/.env.example
@@ -1,6 +1,7 @@
 PAYPAL_CLIENT_ID = ""
 PAYPAL_CLIENT_SECRET = ""
 NEXT_PUBLIC_PAYPAL_CLIENT_ID = ""
+NEXT_PUBLIC_DATABASE_URL = ""
 
 JWT_SECRET=""
 
