--- a/Server/package.json
+++ b/Server/package.json
@@ -16,12 +16,13 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.1",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "pg-hstore": "^2.3.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/node": "^20.6.2"
+    "@types/node": "^20.10.4"
   },
   "description": ""
 }
