--- a/Server/package.json
+++ b/Server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "node server.ts",
     "start": "nodemon server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
