--- a/Server/.gitignore
+++ b/Server/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+node_modules/
 /.pnp
 .pnp.js
 
@@ -13,6 +14,8 @@
 /out/
 ./env
 .env
+
+.netlify
 
 # production
 /build
