--- a/Server/package.json
+++ b/Server/package.json
@@ -1,10 +1,10 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "/functions/api.ts",
   "scripts": {
-    "build": "node server.ts",
-    "start": "nodemon server.ts",
+    "build": "netlify deploy --prod",
+    "start": "nodemon ./functions/api.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,18 +12,22 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.1",
+    "netlify-cli": "^17.10.1",
+    "netlify-lambda": "^2.0.16",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
-    "pg-hstore": "^2.3.4"
+    "pg-hstore": "^2.3.4",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.10.4"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.5"
   },
   "description": ""
 }
